@@ -457,6 +457,25 @@ initpycurl(void)
 
     /* CURLcode: error codes */
     insint_c(d, "E_OK", CURLE_OK);
+    insint_c(d, "E_AGAIN", CURLE_AGAIN);
+    insint_c(d, "E_ALREADY_COMPLETE", CURLE_ALREADY_COMPLETE);
+    insint_c(d, "E_BAD_CALLING_ORDER", CURLE_BAD_CALLING_ORDER);
+    insint_c(d, "E_BAD_PASSWORD_ENTERED", CURLE_BAD_PASSWORD_ENTERED);
+    insint_c(d, "E_FTP_BAD_DOWNLOAD_RESUME", CURLE_FTP_BAD_DOWNLOAD_RESUME);
+    insint_c(d, "E_FTP_COULDNT_SET_TYPE", CURLE_FTP_COULDNT_SET_TYPE);
+    insint_c(d, "E_FTP_PARTIAL_FILE", CURLE_FTP_PARTIAL_FILE);
+    insint_c(d, "E_FTP_USER_PASSWORD_INCORRECT", CURLE_FTP_USER_PASSWORD_INCORRECT);
+    insint_c(d, "E_HTTP_NOT_FOUND", CURLE_HTTP_NOT_FOUND);
+    insint_c(d, "E_HTTP_PORT_FAILED", CURLE_HTTP_PORT_FAILED);
+    insint_c(d, "E_MALFORMAT_USER", CURLE_MALFORMAT_USER);
+    insint_c(d, "E_QUOTE_ERROR", CURLE_QUOTE_ERROR);
+    insint_c(d, "E_RANGE_ERROR", CURLE_RANGE_ERROR);
+    insint_c(d, "E_REMOTE_ACCESS_DENIED", CURLE_REMOTE_ACCESS_DENIED);
+    insint_c(d, "E_REMOTE_DISK_FULL", CURLE_REMOTE_DISK_FULL);
+    insint_c(d, "E_REMOTE_FILE_EXISTS", CURLE_REMOTE_FILE_EXISTS);
+    insint_c(d, "E_UPLOAD_FAILED", CURLE_UPLOAD_FAILED);
+    insint_c(d, "E_URL_MALFORMAT_USER", CURLE_URL_MALFORMAT_USER);
+    insint_c(d, "E_USE_SSL_FAILED", CURLE_USE_SSL_FAILED);
     insint_c(d, "E_UNSUPPORTED_PROTOCOL", CURLE_UNSUPPORTED_PROTOCOL);
     insint_c(d, "E_FAILED_INIT", CURLE_FAILED_INIT);
     insint_c(d, "E_URL_MALFORMAT", CURLE_URL_MALFORMAT);
